Add Tic-Tac -Toe workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: QMake CI/CD
+name: Tic Tac Toe CI/CD
 
 on:
   push:
@@ -16,29 +16,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Qt
-        run: sudo apt-get update && sudo apt-get install -y qt5-qmake qtbase5-dev qt5-default
+      - name: Set up Qt environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qt5-qmake qtbase5-dev qt5-default
 
-      - name: Configure QMake
-        run: qmake -v && qmake CONFIG+=debug
+      - name: Build game
+        run: |
+          qmake -v
+          qmake CONFIG+=debug
+          make
 
-      - name: Build Project
-        run: make
+      - name: Run unit tests
+        run: ./tests/run_tests  # Replace with your test executable path
 
-      - name: Run Tests
-        run: ./tests/test_game.cpp  # Adjust path if necessary
+      - name: Analyze code quality
+        run: |
+          # Add any code quality analysis tools here (e.g., Clang static analyzer, cppcheck)
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
+      - name: Package artifacts
+        run: |
+          # Package your built artifacts for deployment (if applicable)
+          # For Qt projects, this might involve creating an installer or packaging the executable
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs  # Replace with your build output directory
-          publish_branch: gh-pages  # Replace with your deployment branch
+      # Add deployment step if you have a deployment target like GitHub Pages, AWS, etc.
+      # - name: Deploy to GitHub Pages
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./docs  # Replace with your build output directory
+      #     publish_branch: gh-pages  # Replace with your deployment branch
